--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pick 6 Pack</title>
-
+    <link rel="shortcut icon" type="image/jpg" href="logo.jpg"/>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
         integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
         crossorigin="anonymous"></script>
@@ -102,7 +102,7 @@
                 <p id="demo">
                     <script>
                         // Set the date we're counting down to
-                        var countDownDate = new Date("Sep 8, 2022 18:20:00").getTime();
+                        var countDownDate = new Date("Sep 7, 2023 18:20:00").getTime();
 
                         // Update the count down every 1 second
                         var x = setInterval(function () {
